# MOQ-Music-Streaming-App

./: Cargo.toml  README.md  bear_radio.sh  index.html
src/: lib.rs  main.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs  subscribe_manager.rs
src/web_imp/: Cargo.toml
src/web_imp/src/: main.rs  web_server.rs
