[package]
name = "final-project-group3_s25"
version = "0.1.0"
edition = "2021"




[dependencies]
moq-native = {path = "moq-rs/moq-native"}
moq-transfork = {path = "moq-rs/moq-transfork"}
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
bytes = "1.10.1"
rodio = "0.20.1"
opus = "0.3.0"
rubato = "0.13"
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
bytemuck = "1.14"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4.40"
crossterm = "0.26"
ratatui = "0.20"
serde_json = "1.0.140"

[[bin]]
name = "cli"
path = "src/cli/src/main.rs"

[[bin]]
name = "web_imp"
path = "src/web_imp/src/main.rs"
